--- a/covid_DARTS.ipynb
+++ b/covid_DARTS.ipynb
@@ -371,88 +371,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "e8b91048",
+   "execution_count": 44,
+   "id": "8448d559",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "7\n",
-      "38\n",
-      "39\n",
-      "51\n",
-      "0\n",
-      "1\n",
-      "7\n",
-      "38\n",
-      "39\n",
-      "51\n",
-      "47\n",
-      "177\n",
-      "177\n",
-      "177\n",
-      "177\n",
-      "792\n",
-      "792\n",
-      "183\n",
-      "183\n",
-      "47\n",
-      "47\n",
-      "47\n",
-      "47\n",
-      "54\n",
-      "54\n",
-      "53\n",
-      "53\n",
-      "47\n",
-      "327\n",
-      "327\n",
-      "327\n",
-      "570\n",
-      "328\n",
-      "328\n",
-      "327\n",
-      "327\n",
-      "327\n",
-      "570\n",
-      "328\n",
-      "328\n",
-      "328\n",
-      "7\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "792\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "685\n",
-      "685\n",
-      "685\n",
-      "685\n"
+      "iso_code has 0 blank values\n",
+      "continent has 0 blank values\n",
+      "location has 0 blank values\n",
+      "date has 0 blank values\n",
+      "total_cases has 0 blank values\n",
+      "new_cases has 1 blank values\n",
+      "new_cases_smoothed has 7 blank values\n",
+      "total_deaths has 38 blank values\n",
+      "new_deaths has 39 blank values\n",
+      "new_deaths_smoothed has 51 blank values\n",
+      "total_cases_per_million has 0 blank values\n",
+      "new_cases_per_million has 1 blank values\n",
+      "new_cases_smoothed_per_million has 7 blank values\n",
+      "total_deaths_per_million has 38 blank values\n",
+      "new_deaths_per_million has 39 blank values\n",
+      "new_deaths_smoothed_per_million has 51 blank values\n",
+      "reproduction_rate has 47 blank values\n",
+      "icu_patients has 177 blank values\n",
+      "icu_patients_per_million has 177 blank values\n",
+      "hosp_patients has 177 blank values\n",
+      "hosp_patients_per_million has 177 blank values\n",
+      "weekly_icu_admissions has 792 blank values\n",
+      "weekly_icu_admissions_per_million has 792 blank values\n",
+      "weekly_hosp_admissions has 183 blank values\n",
+      "weekly_hosp_admissions_per_million has 183 blank values\n",
+      "total_tests has 47 blank values\n",
+      "new_tests has 47 blank values\n",
+      "total_tests_per_thousand has 47 blank values\n",
+      "new_tests_per_thousand has 47 blank values\n",
+      "new_tests_smoothed has 54 blank values\n",
+      "new_tests_smoothed_per_thousand has 54 blank values\n",
+      "positive_rate has 53 blank values\n",
+      "tests_per_case has 53 blank values\n",
+      "tests_units has 47 blank values\n",
+      "total_vaccinations has 327 blank values\n",
+      "people_vaccinated has 327 blank values\n",
+      "people_fully_vaccinated has 327 blank values\n",
+      "total_boosters has 570 blank values\n",
+      "new_vaccinations has 328 blank values\n",
+      "new_vaccinations_smoothed has 328 blank values\n",
+      "total_vaccinations_per_hundred has 327 blank values\n",
+      "people_vaccinated_per_hundred has 327 blank values\n",
+      "people_fully_vaccinated_per_hundred has 327 blank values\n",
+      "total_boosters_per_hundred has 570 blank values\n",
+      "new_vaccinations_smoothed_per_million has 328 blank values\n",
+      "new_people_vaccinated_smoothed has 328 blank values\n",
+      "new_people_vaccinated_smoothed_per_hundred has 328 blank values\n",
+      "stringency_index has 7 blank values\n",
+      "population has 0 blank values\n",
+      "population_density has 0 blank values\n",
+      "median_age has 0 blank values\n",
+      "aged_65_older has 0 blank values\n",
+      "aged_70_older has 0 blank values\n",
+      "gdp_per_capita has 0 blank values\n",
+      "extreme_poverty has 0 blank values\n",
+      "cardiovasc_death_rate has 0 blank values\n",
+      "diabetes_prevalence has 0 blank values\n",
+      "female_smokers has 0 blank values\n",
+      "male_smokers has 0 blank values\n",
+      "handwashing_facilities has 792 blank values\n",
+      "hospital_beds_per_thousand has 0 blank values\n",
+      "life_expectancy has 0 blank values\n",
+      "human_development_index has 0 blank values\n",
+      "excess_mortality_cumulative_absolute has 685 blank values\n",
+      "excess_mortality_cumulative has 685 blank values\n",
+      "excess_mortality has 685 blank values\n",
+      "excess_mortality_cumulative_per_million has 685 blank values\n"
      ]
     }
    ],
    "source": [
     "col_list = df_us.columns\n",
     "for col in col_list:\n",
-    "    print(df_us[col].isna().sum())"
+    "    print(col + \" has \" +str(df_us[col].isna().sum()) + \" blank values\")"
    ]
   },
   {
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d828e4bb",
+   "id": "a7525472",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384af719",
+   "id": "5a2ba0b0",
    "metadata": {},
    "outputs": [],
    "source": []
